--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -9,7 +9,12 @@ security:
             security: false
 
         main:
-            anonymous: ~
+            pattern: ^/
+            form_login:
+                provider: fos_userbundle
+            logout:       true
+            anonymous:    true
+            #anonymous: ~
             # activate different ways to authenticate
 
             # http_basic: ~
@@ -17,6 +22,14 @@ security:
 
             # form_login: ~
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+
+        oauth_token:
+            pattern:    ^/oauth/v2/token
+            security:   false
+
+        oauth_authorize:
+            pattern:    ^/oauth/v2/auth
+            anonymous: true
 
     encoders:
         FOS\UserBundle\Model\UserInterface: sha512
